traces/bug_678.txt
examples++-load/ff-Ipopt.cpp:984: error: DEAD_STORE
  The value written to &cost (type double) is never used.
Showing all 1 steps of the trace


examples++-load/ff-Ipopt.cpp:984:13: Write of unused value
982.           virtual AnyType operator()(Stack stack)  const
983.           {
984.               double cost = nan("");
                   ^
985.               WhereStackOfPtr2Free(stack)=new StackOfPtr2Free(stack);// FH mars 2005
986.               Rn &x = *GetAny<Rn *>((*X)(stack));
